merul_Dev/src/objects/WTOFormFields__c.object
<CustomObject>
    <fields>
        <fullName>Fieldsapiname__c</fullName>
        <label>Fieldsapiname</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>objectapiname__c</fullName>
        <label>objectapiname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>WTOFormFields</label>
    <nameField>
        <label>WTOFormFields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WTOFormFieldss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>